# cloudflare-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/codeql/: codeql-rust.yml
.github/workflows/: code-coverage.yml  codeql.yml  dependency-governance.yml  rust-validation.yml
docs/: AGENT_ROUTING.md  API-PARITY.md  CLIENT-CONTRACT.md  CONFORMANCE_DOGFOOD.md  GETTING_STARTED.md  RUNBOOK.md  SECURITY_MODEL.md  TOOL_GUIDE.md  ops-coordination.md  windows-stdio-handoff.md
docs/adr/: 0001-latest-mcp-auth-strategy.md
packaging/codex/: cloudflare-managed-mcp.example.toml
packaging/windows/: codex-config.example.toml  smoke-stdio.ps1
scripts/: generate-release-provenance.sh
spec/: README.md  cloudflare_api_catalog.v1.json  tool_schema_snapshot.v1.json
src/: access_app.rs  api_catalog.rs  cache.rs  config.rs  dns_route.rs  lib.rs  main.rs  mutation.rs  pages_deploy.rs  policy.rs  portal.rs  publish.rs  resources.rs  server.rs  sql_preflight.rs  tool_surface.rs  tools.rs  tunnel.rs  verification.rs  worker_upload.rs
src/cloudflare/: analytics_engine.rs  bulk_redirects.rs  capabilities.rs  client.rs  email_routing.rs  mod.rs  model.rs  pages.rs  queues.rs  workers_observability.rs
tests/: mcp_stdio_smoke.rs
tools/: generate-api-catalog.sh
